@@ -19,3 +19,6 @@ class DMY_InstModification : CIM_InstModification
 {
 };
 
+class SFCB_ServiceAffectsElement : CIM_ServiceAffectsElement
+{
+};
